--- a/index.html
+++ b/index.html
@@ -6,19 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sorteia Países</title>
     <link rel="stylesheet" href="/src/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Lobster&family=Quando&family=Quicksand&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tiro+Devanagari+Hindi:ital@1&display=swap"
         rel="stylesheet">
+    <script src="/src/js/script.js" async></script>
 </head>
 <body class="bg_mapa">
     <header></header>
     <main>
-        <section class="box_padrao text_center">
-            <div id="boxMensagem"></div>
-            <button id="btnMensagem"></button>
+        <section class="box_padrao text_center bold">
+            <p id="pExplicativo">👇 Sorteie um país da América do Sul para visualizar uma curiosidade:</p>
+            <div class="hide " id="boxMensagem">
+                <div class="box-mensagem">
+                    <p class="pais_titulo" id="paisTitulo"></p>
+                    <p class="pais_curiosidade text_center" id="paisCuriosidade"></p>
+                    <p class="pais_contagem" id="paisContagem"></p>
+                </div>
+            </div>
+            <button class="btn" id="btnMensagem">SORTEAR</button>
         </section>
+        <div class="posicao"><i class="fa fa-arrow-down fa-4x" aria-hidden="true"></i></div>
     </main>
     <footer></footer>
 </body>
